# opndb

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.md
opndb/: __init__.py  client.py  df_ops.py  main.py  string_cleaning.py  string_cleaning_ops.py  terminal_printers.py  utils.py  workflows.py
opndb/addresses/: base.py
opndb/constants/: base.py  columns.py  files.py
opndb/schema/: 20250207_init.py  __init__.py  model_export.py
opndb/schema/base/: process.py
opndb/schema/chi/: __init__.py  out.py  process.py  raw.py
opndb/schema/mpls/: out.py  process.py  raw.py
opndb/schema/v0_1/: __init__.py  out.py  process.py  raw.py  schema.py  schema_raw.py  schema_test.py
opndb/schema/v1_1/: process.py
opndb/schema_utils/export/: model_export.py
opndb/scripts/: mpls.py
opndb/services/: address.py  column.py  config.py  dataframe.py  match.py  matching.py  string_clean.py  summary_stats.py  terminal_printers.py
opndb/services/dataframe/: base.py  ops.py
opndb/tests/: test_sanity.py  test_string_clean.py  tests_network.py
opndb/tests/schema/: test_schema.py
opndb/types/: base.py
opndb/validator/: df_model.py
opndb/workflows/: address.py  addresses.py  base.py  mpls.py  network_match.py  string_match.py
src/opndb/: main.py  terminal_printers.py  utils.py  workflows.py
src/opndb/constants/: base.py  columns.py
src/opndb/schema/: 20250207_init.py
src/opndb/validator/: df_model.py
