[project]
name = "opndb"
version = "0.1.0"
description = "Open Property Network Database - A tool for standardizing property ownership data workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandera[io]>=0.22.1",
    "click==8.1.8",
    "rich==13.9.4",
    "pandas==2.2.3",
    "word2number==1.1"
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[project.scripts]
opndb = "opndb.main:cli"
