[project]
name = "opndb"
version = "0.1.0"
description = "Open Property Network Database - A tool for standardizing property ownership data workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandera[io]>=0.22.1",
    "click==8.1.8",
    "rich==13.9.4",
    "pandas==2.2.3",
    "word2number==1.1",
    "networkx==3.4.2",
    "scikit-learn==1.6.1",
    "Levenshtein==0.25.1",
    "markdown>=3.7",
    "weasyprint>=64.1",
    "questionary>=2.1.0",
    "nmslib-metabrainz==2.1.3"
]

[tool.setuptools.packages.find]
include = ["opndb*"]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "hypothesis[pandas]>=6.126.0",
    "pytest>=8.3.4",
]

[project.scripts]
opndb = "opndb.main:cli"

[pytest]
testpaths = "opndb/tests"
python_files = "test_*.py"

